--- a/index.html
+++ b/index.html
@@ -1,63 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>LibraryTrial</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat|Montserrat+Subrayada&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Montserrat|Montserrat+Subrayada&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" type="text/css" href="style.css" />
     <script src="script.js" defer></script>
-    <script src="https://kit.fontawesome.com/f1eb37ec03.js" crossorigin="anonymous"></script>
-</head>
-<body>
-<header class="d-flex align-items-center justify-content-between">
-    MY LIBRARY
-    <div class="dropdown">
+    <script
+      src="https://kit.fontawesome.com/f1eb37ec03.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
+    <header class="d-flex align-items-center justify-content-between">
+      MY LIBRARY
+      <div class="dropdown">
         <button onclick="showForm(true)" class="dropbtn">Add Book</button>
-    </div>
-</header>
-<main class="d-flex align-items-center justify-content-center">
-    <table class="books-table" id="books-table">
+      </div>
+    </header>
+    <main class="d-flex align-items-center justify-content-center">
+      <table class="books-table" id="books-table">
         <thead>
-        <tr class="books-header">
+          <tr class="books-header">
             <th>Title</th>
             <th>Author</th>
             <th>Genre</th>
             <th>Pages</th>
             <th>Read Status</th>
             <th>Remove</th>
-        </tr>
+          </tr>
         </thead>
-        <tbody id="books-info">
-        </tbody>
-    </table>
+        <tbody id="books-info"></tbody>
+      </table>
 
-    <div class="form-container" id="addBook">
+      <div class="form-container" id="addBook">
         <input type="text" name="title" id="title" placeholder="Title" /><br />
-        <input type="text" name="author" id="author" placeholder="Author" /><br />
+        <input
+          type="text"
+          name="author"
+          id="author"
+          placeholder="Author"
+        /><br />
         <input type="text" name="genre" id="genre" placeholder="Genre" /><br />
         <input type="text" name="pages" id="pages" placeholder="Pages" /><br />
-        <input type="radio" name="readStatus" id="readStatus"/>
-        <label for="readStatus"> Readed </label><br>
-        <input type="radio" name="readStatus" id="readStatus1"/>
-        <label for="readStatus1"> Not Readed</label><br>
-        <input type="radio" name="readStatus" id="readStatus2"/>
-        <label for="readStatus2"> Reading</label><br>
-        <button class="dropbtn" onclick="addBookToLibrary();hideForm(true)">Add Book</button>
-        <button type="button" class="btn cancel" onclick="hideForm(true)">Close</button>
-    </div>
+        <input type="radio" name="readStatus" id="readStatus" />
+        <label for="readStatus"> Readed </label><br />
+        <input type="radio" name="readStatus" id="readStatus1" />
+        <label for="readStatus1"> Not Readed</label><br />
+        <input type="radio" name="readStatus" id="readStatus2" />
+        <label for="readStatus2"> Reading</label><br />
+        <button class="dropbtn" onclick="addBookToLibrary();hideForm(true)">
+          Add Book
+        </button>
+        <button type="button" class="btn cancel" onclick="hideForm(true)">
+          Close
+        </button>
+      </div>
 
-    <div class="form-container update-form" id="change-status-form">
-        <input type="radio" name="readStatus" id="readStatus3"/>
-        <label for="readStatus"> Readed </label><br>
-        <input type="radio" name="readStatus" id="readStatus4"/>
-        <label for="readStatus1"> Not Readed</label><br>
-        <input type="radio" name="readStatus" id="readStatus5"/>
-        <label for="readStatus2"> Reading</label><br>
-        <button class="dropbtn" id="updateBTN" onclick="updateStatus();hideForm()">Update Status</button>
-        <button type="button" class="btn cancel" onclick="hideForm()">Close</button>
-    </div>
-
-</main>
-</body>
+      <div class="form-container update-form" id="change-status-form">
+        <input type="radio" name="readStatus" id="readStatus3" />
+        <label for="readStatus"> Readed </label><br />
+        <input type="radio" name="readStatus" id="readStatus4" />
+        <label for="readStatus1"> Not Readed</label><br />
+        <input type="radio" name="readStatus" id="readStatus5" />
+        <label for="readStatus2"> Reading</label><br />
+        <button
+          class="dropbtn"
+          id="updateBTN"
+          onclick="updateStatus();hideForm()"
+        >
+          Update Status
+        </button>
+        <button type="button" class="btn cancel" onclick="hideForm()">
+          Close
+        </button>
+      </div>
+    </main>
+  </body>
 </html>
