--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
       <div class="form-container text-center" id="addBook">
         <h2 class="add_form_header">MY LIBRARY</h2>
-        <input class="form_input" type="text" name="title" id="title" placeholder="Title" /><br />
+        <input class="form_input" type="text" name="title" id="title" placeholder="Title" required/><br />
         <input class="form_input"
           type="text"
           name="author"
