[FIX] updated fuction for valid entry

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <label class="radio-text" for="readStatus1"> Not Read</label>
         <input class="radio_padding" type="radio" name="readStatus" id="readStatus2" />
         <label class="radio-text" for="readStatus2"> Reading</label><br />
-        <button class="dropbtn submit-button" onclick="addBookToLibrary();hideForm(true)">
+        <button class="dropbtn submit-button" onclick="checkCreatedValid();hideForm(true)">
           Submit
         </button>
       </div>
