Changed input type on form

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           placeholder="Author"
         /><br />
         <input class="form_input" type="text" name="genre" id="genre" placeholder="Genre" /><br />
-        <input class="form_input pages" type="text" name="pages" id="pages" placeholder="Pages" /><br />
+        <input class="form_input pages" type="number" name="pages" id="pages" placeholder="Pages" /><br />
         <input class="radio_padding" type="radio" name="readStatus" id="readStatus" />
         <label class="radio-text" for="readStatus"> Read </label>
         <input class="radio_padding" type="radio" name="readStatus" id="readStatus1" />
